[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project]
name = "arm_none_eabi_gcc_toolchain"
version = "0.1.0"
description = "Arm GNU Toolchain (arm-none-eabi-gcc)"
authors = [
    { name = "Carlos Pereira Atencio", email = "carlosperate@embeddedlog.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {"file" = "LICENSE"}

[project.scripts]
arm-none-eabi-gcc-t = "arm_none_eabi_gcc_toolchain.launch:arm_none_eabi_gcc"
