[build-system]
# Temporarily use my fork until fixes are included upstream
# https://github.com/wheelnext/wheel-stub/issues/22
# requires = ["wheel-stub >= 0.4.2"]
requires = ["wheel-stub @ git+https://github.com/carlosperate/wheel-stub@fix/pkg-info-encoding"]

build-backend = "wheel_stub.buildapi"

[tool.wheel_stub]
index_url = "https://carlosperate.github.io/arm-none-eabi-gcc-py-package/"

[project]
# This minimum Python version comes from wheel-stub
requires-python = ">=3.8"
