
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arm_none_eabi_gcc_toolchain"
version = "0.1.0"
description = "Arm GNU Toolchain (arm-none-eabi-gcc)"
authors = [
    { name = "Carlos Pereira Atencio", email = "carlosperate@embeddedlog.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

# The individual executables will be added here
[project.scripts]
