[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project]
name = "toolchain_package_builder"
version = "0.1.0"
description = "Downloads a GNU Arm Embedded Toolchain and packages it as a Python package"
authors = [
    { name = "Carlos Pereira Atencio", email = "carlosperate@embeddedlog.com" }
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {"file" = "LICENSE"}
